--- a/swak-common/pom.xml
+++ b/swak-common/pom.xml
@@ -72,5 +72,9 @@
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.lmax</groupId>
+			<artifactId>disruptor</artifactId>
+		</dependency>
 	</dependencies>
 </project>
