简单的异步执行即可

--- a/swak-test/pom.xml
+++ b/swak-test/pom.xml
@@ -21,6 +21,24 @@
 			<artifactId>swak-rpc</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>co.paralleluniverse</groupId>
+			<artifactId>comsat-servlet</artifactId>
+			<version>0.7.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>co.paralleluniverse</groupId>
+			<artifactId>comsat-jdbc</artifactId>
+			<version>0.7.0</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>co.paralleluniverse</groupId>
+			<artifactId>comsat-spring-webmvc</artifactId>
+			<version>0.7.0</version>
+		</dependency>
+
 		<!-- 测试 -->
 		<dependency>
 			<groupId>junit</groupId>
