响应式之道

--- a/swak-common/pom.xml
+++ b/swak-common/pom.xml
@@ -129,5 +129,10 @@
 			<groupId>com.alibaba</groupId>
 			<artifactId>druid</artifactId>
 		</dependency>
+		<!-- RX -->
+		<dependency>
+			<groupId>io.reactivex</groupId>
+			<artifactId>rxjava</artifactId>
+		</dependency>
 	</dependencies>
 </project>
