新版响应式编程

--- a/swak-common/pom.xml
+++ b/swak-common/pom.xml
@@ -134,5 +134,9 @@
 			<groupId>io.reactivex</groupId>
 			<artifactId>rxjava</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>io.projectreactor</groupId>
+			<artifactId>reactor-core</artifactId>
+		</dependency>
 	</dependencies>
 </project>
