--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
 		<mybatis-spring.version>1.3.1</mybatis-spring.version>
 		<druid.version>1.0.24</druid.version>
 		<rxjava.version>1.2.10</rxjava.version>
+		<reactor.version>3.1.6.RELEASE</reactor.version>
 
 		<!-- test -->
 		<junit.version>4.12</junit.version>
@@ -355,11 +356,16 @@
 				<artifactId>mybatis-spring</artifactId>
 				<version>${mybatis-spring.version}</version>
 			</dependency>
-			<!-- RX -->
+			<!-- reactor -->
 			<dependency>
 				<groupId>io.reactivex</groupId>
 				<artifactId>rxjava</artifactId>
 				<version>${rxjava.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.projectreactor</groupId>
+				<artifactId>reactor-core</artifactId>
+				<version>${reactor.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
