--- a/swak-common/pom.xml
+++ b/swak-common/pom.xml
@@ -138,5 +138,10 @@
 			<groupId>io.projectreactor</groupId>
 			<artifactId>reactor-core</artifactId>
 		</dependency>
+		<!-- VERT -->
+		<dependency>
+			<groupId>io.vertx</groupId>
+			<artifactId>vertx-core</artifactId>
+		</dependency>
 	</dependencies>
 </project>
