--- a/pom.xml
+++ b/pom.xml
@@ -14,12 +14,14 @@
 		<module>swak-webflux</module>
 	</modules>
 	<properties>
+		<spring.version>5.0.5.RELEASE</spring.version>
+		<spring-boot.version>2.0.1.RELEASE</spring-boot.version>
 		<cglib.version>2.2.2</cglib.version>
-		<spring.version>4.3.7.RELEASE</spring.version>
 		<fastjson.version>1.2.32</fastjson.version>
-		<logback.version>1.1.7</logback.version>
+		<jackson.version>2.9.5</jackson.version>
+		<logback.version>1.2.3</logback.version>
 		<slf4j.version>1.7.5</slf4j.version>
-		<netty.version>4.1.20.Final</netty.version>
+		<netty.version>4.1.23.Final</netty.version>
 		<metrics.version>4.0.2</metrics.version>
 		<commons-lang3.version>3.3.2</commons-lang3.version>
 		<commons-io.version>2.4</commons-io.version>
@@ -37,9 +39,9 @@
 		<akka.version>2.5.11</akka.version>
 		<kotlin.version>1.2.31</kotlin.version>
 		<kotlin.coroutines.version>0.22.5</kotlin.coroutines.version>
-		<mybatis.version>3.4.1</mybatis.version>
-		<mybatis-spring.version>1.3.1</mybatis-spring.version>
-		<druid.version>1.0.24</druid.version>
+		<mybatis.version>3.4.6</mybatis.version>
+		<mybatis-spring.version>1.3.2</mybatis-spring.version>
+		<druid.version>1.1.6</druid.version>
 		<rxjava.version>1.2.10</rxjava.version>
 		<reactor.version>3.1.6.RELEASE</reactor.version>
 		<vertx.version>3.5.1</vertx.version>
@@ -97,6 +99,26 @@
 				<groupId>com.alibaba</groupId>
 				<artifactId>fastjson</artifactId>
 				<version>${fastjson.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-core</artifactId>
+				<version>${jackson.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-databind</artifactId>
+				<version>${jackson.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-annotations</artifactId>
+				<version>${jackson.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.fasterxml.jackson.module</groupId>
+				<artifactId>jackson-module-jaxb-annotations</artifactId>
+				<version>${jackson.version}</version>
 			</dependency>
 			<!-- SPRING BEGIN -->
 			<dependency>
