--- a/swak-common/pom.xml
+++ b/swak-common/pom.xml
@@ -119,7 +119,7 @@
 		</dependency>
 		<!-- RX -->
 		<dependency>
-			<groupId>io.reactivex</groupId>
+			<groupId>io.reactivex.rxjava2</groupId>
 			<artifactId>rxjava</artifactId>
 		</dependency>
 		<dependency>
