--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
 		<mybatis.version>3.4.6</mybatis.version>
 		<mybatis-spring.version>1.3.2</mybatis-spring.version>
 		<druid.version>1.1.6</druid.version>
-		<rxjava.version>1.2.10</rxjava.version>
+		<rxjava.version>2.1.12</rxjava.version>
 		<reactor.version>3.1.6.RELEASE</reactor.version>
 		<vertx.version>3.5.1</vertx.version>
 
@@ -92,10 +92,10 @@
 
 			<!-- spring boot -->
 			<dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter</artifactId>
-                <version>2.0.1.RELEASE</version>
-            </dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter</artifactId>
+				<version>2.0.1.RELEASE</version>
+			</dependency>
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter-webflux</artifactId>
@@ -401,7 +401,7 @@
 			</dependency>
 			<!-- reactor -->
 			<dependency>
-				<groupId>io.reactivex</groupId>
+				<groupId>io.reactivex.rxjava2</groupId>
 				<artifactId>rxjava</artifactId>
 				<version>${rxjava.version}</version>
 			</dependency>
