--- a/swak-kotlin/pom.xml
+++ b/swak-kotlin/pom.xml
@@ -21,6 +21,10 @@
 			<groupId>org.jetbrains.kotlinx</groupId>
 			<artifactId>kotlinx-coroutines-core</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.jetbrains.kotlinx</groupId>
+			<artifactId>kotlinx-coroutines-rx2</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
