--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
 		<disruptor.version>3.4.0</disruptor.version>
 		<ehcache.version>2.6.11</ehcache.version>
 		<jedis.version>2.9.0</jedis.version>
+		<redisson.version>3.6.5</redisson.version>
 		<fst.version>2.48</fst.version>
 		<kryo.version>4.0.0</kryo.version>
 		<quasar.version>0.7.9</quasar.version>
@@ -102,7 +103,6 @@
 				<artifactId>spring-boot-starter-webflux</artifactId>
 				<version>2.0.1.RELEASE</version>
 			</dependency>
-
 			<dependency>
 				<groupId>cglib</groupId>
 				<artifactId>cglib</artifactId>
@@ -132,6 +132,11 @@
 			<dependency>
 				<groupId>com.fasterxml.jackson.module</groupId>
 				<artifactId>jackson-module-jaxb-annotations</artifactId>
+				<version>${jackson.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.fasterxml.jackson.dataformat</groupId>
+				<artifactId>jackson-dataformat-yaml</artifactId>
 				<version>${jackson.version}</version>
 			</dependency>
 			<!-- SPRING BEGIN -->
@@ -299,6 +304,37 @@
 					<exclusion>
 						<groupId>org.apache.commons</groupId>
 						<artifactId>commons-pool2</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+			<dependency>
+				<groupId>org.redisson</groupId>
+				<artifactId>redisson</artifactId>
+				<version>${redisson.version}</version>
+				<exclusions>
+					<exclusion>
+						<groupId>io.netty</groupId>
+						<artifactId>netty-common</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>io.netty</groupId>
+						<artifactId>netty-codec</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>io.netty</groupId>
+						<artifactId>netty-buffer</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>io.netty</groupId>
+						<artifactId>netty-transport</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>io.netty</groupId>
+						<artifactId>netty-resolver-dns</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>io.netty</groupId>
+						<artifactId>netty-handler</artifactId>
 					</exclusion>
 				</exclusions>
 			</dependency>
