--- a/swak-test/pom.xml
+++ b/swak-test/pom.xml
@@ -20,7 +20,7 @@
 			<groupId>com.swak</groupId>
 			<artifactId>swak-rpc</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.jetbrains.kotlin</groupId>
 			<artifactId>kotlin-stdlib</artifactId>
@@ -29,13 +29,13 @@
 			<groupId>org.jetbrains.kotlinx</groupId>
 			<artifactId>kotlinx-coroutines-core</artifactId>
 		</dependency>
-		
+
 		<!-- VERT -->
 		<dependency>
 			<groupId>io.vertx</groupId>
 			<artifactId>vertx-core</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.jetbrains.kotlin</groupId>
 			<artifactId>kotlin-stdlib</artifactId>
@@ -61,6 +61,11 @@
 			<groupId>co.paralleluniverse</groupId>
 			<artifactId>comsat-spring-webmvc</artifactId>
 			<version>0.7.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.lmax</groupId>
+			<artifactId>disruptor</artifactId>
 		</dependency>
 
 		<!-- 测试 -->
