--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.swak</groupId>
 	<artifactId>swak</artifactId>
-	<version>0.0.2_final</version>
+	<version>0.0.3_final</version>
 	<packaging>pom</packaging>
 	<modules>
 		<module>swak-http</module>
@@ -493,6 +493,11 @@
 			<dependency>
 				<groupId>org.jetbrains.kotlinx</groupId>
 				<artifactId>kotlinx-coroutines-rx2</artifactId>
+				<version>${kotlin.coroutines.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.jetbrains.kotlinx</groupId>
+				<artifactId>kotlinx-coroutines-reactor</artifactId>
 				<version>${kotlin.coroutines.version}</version>
 			</dependency>
 			<!-- JDBC DRIVER BEGIN -->
