--- a/swak-kotlin/pom.xml
+++ b/swak-kotlin/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.swak</groupId>
 		<artifactId>swak</artifactId>
-		<version>0.0.2_final</version>
+		<version>0.0.3_final</version>
 	</parent>
 	<artifactId>swak-kotlin</artifactId>
 	<dependencies>
@@ -23,7 +23,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.jetbrains.kotlinx</groupId>
-			<artifactId>kotlinx-coroutines-rx2</artifactId>
+			<artifactId>kotlinx-coroutines-reactor</artifactId>
 		</dependency>
 	</dependencies>
 	<build>
