友好性改进

--- a/swak-test/pom.xml
+++ b/swak-test/pom.xml
@@ -72,10 +72,16 @@
 			<groupId>io.netty</groupId>
 			<artifactId>netty-all</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>io.reactivex.rxjava2</groupId>
 			<artifactId>rxjava</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>io.lettuce</groupId>
+			<artifactId>lettuce-core</artifactId>
+			<version>5.0.3.RELEASE</version>
 		</dependency>
 
 		<!-- 测试 -->
