--- a/swak-http/pom.xml
+++ b/swak-http/pom.xml
@@ -12,5 +12,9 @@
 			<groupId>com.swak</groupId>
 			<artifactId>swak-common</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.esotericsoftware</groupId>
+			<artifactId>kryo-shaded</artifactId>
+		</dependency>
 	</dependencies>
 </project>
