项目整合测试

--- a/swak-sample/src/main/resources/application.properties
+++ b/swak-sample/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.application.serverSn = server-1-1
 #spring.application.enableSecurity=true
 #spring.application.enableBooter=true
 #spring.application.enableDataBase=false
-spring.application.enableMybatis=false
+#spring.application.enableMybatis=true
 
 # server
 spring.http-server.port=8080
