--- a/swak-sample/src/main/resources/application.properties
+++ b/swak-sample/src/main/resources/application.properties
@@ -20,3 +20,4 @@ spring.cache.password=12345678....
 spring.datasource.url = jdbc:mysql://localhost:3306/shop?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username = root
 spring.datasource.password = rootadmin
+spring.datasource.maxActive= 200
