优化lettuce 和调式

--- a/swak-sample/src/main/resources/application.properties
+++ b/swak-sample/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.application.serverSn = server-1-1
 
 # server
 spring.http-server.port=8080
+spring.http-server.mode=NIO
 
 # redis cache
 spring.cache.hosts=127.0.0.1:6379
