--- a/swak-sample/src/main/resources/application.properties
+++ b/swak-sample/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.application.serverSn = server-1-1
 
 # server
 spring.http-server.port=8080
-spring.http-server.mode=NIO
+spring.http-server.mode=EPOLL
 
 # redis cache
 spring.cache.hosts=127.0.0.1:6379
