--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
 		<slf4j.version>1.7.5</slf4j.version>
 		<netty.version>4.1.23.Final</netty.version>
 		<metrics.version>4.0.2</metrics.version>
+		<micrometer.version>1.0.4</micrometer.version>
 		<commons-lang3.version>3.3.2</commons-lang3.version>
 		<commons-io.version>2.4</commons-io.version>
 		<commons-codec.version>1.8</commons-codec.version>
@@ -97,6 +98,11 @@
 			<dependency>
 				<groupId>com.swak</groupId>
 				<artifactId>swak-kotlin</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.swak</groupId>
+				<artifactId>swak-actuator</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 
@@ -307,6 +313,11 @@
 				<groupId>io.dropwizard.metrics</groupId>
 				<artifactId>metrics-core</artifactId>
 				<version>${metrics.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.micrometer</groupId>
+                <artifactId>micrometer-core</artifactId>
+				<version>${micrometer.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.commons</groupId>
