--- a/swak-actuator/pom.xml
+++ b/swak-actuator/pom.xml
@@ -12,5 +12,9 @@
 			<groupId>com.swak</groupId>
 			<artifactId>swak-http</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-core</artifactId>
+		</dependency>
 	</dependencies>
 </project>
