--- a/swak-sample/src/main/resources/application.properties
+++ b/swak-sample/src/main/resources/application.properties
@@ -22,3 +22,6 @@ spring.datasource.url = jdbc:mysql://localhost:3306/shop?useUnicode=true&charact
 spring.datasource.username = root
 spring.datasource.password = rootadmin
 spring.datasource.maxActive= 200
+
+# actuator
+#spring.trace.storageChannel=STDOUT
