优化加载顺序

--- a/swak-common/pom.xml
+++ b/swak-common/pom.xml
@@ -118,6 +118,12 @@
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>druid</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.zaxxer</groupId>
+			<artifactId>HikariCP</artifactId>
+			<scope>provided</scope>
 		</dependency>
 
 		<!-- springboot -->
