--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
 		<mybatis.version>3.4.6</mybatis.version>
 		<mybatis-spring.version>1.3.2</mybatis-spring.version>
 		<druid.version>1.1.6</druid.version>
+		<HikariCP.version>3.1.0</HikariCP.version>
 		<rxjava.version>2.1.12</rxjava.version>
 		<reactor.version>3.1.7.RELEASE</reactor.version>
 		<vertx.version>3.5.1</vertx.version>
@@ -118,7 +119,7 @@
 					</exclusion>
 					<exclusion>
 						<groupId>org.yaml</groupId>
-                        <artifactId>snakeyaml</artifactId>
+						<artifactId>snakeyaml</artifactId>
 					</exclusion>
 				</exclusions>
 			</dependency>
@@ -316,7 +317,7 @@
 			</dependency>
 			<dependency>
 				<groupId>io.micrometer</groupId>
-                <artifactId>micrometer-core</artifactId>
+				<artifactId>micrometer-core</artifactId>
 				<version>${micrometer.version}</version>
 			</dependency>
 			<dependency>
@@ -605,6 +606,11 @@
 						<artifactId>tools</artifactId>
 					</exclusion>
 				</exclusions>
+			</dependency>
+			<dependency>
+				<groupId>com.zaxxer</groupId>
+				<artifactId>HikariCP</artifactId>
+				<version>${HikariCP.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.mybatis</groupId>
