数据库的监控

--- a/swak-actuator/pom.xml
+++ b/swak-actuator/pom.xml
@@ -16,5 +16,9 @@
 			<groupId>io.micrometer</groupId>
 			<artifactId>micrometer-core</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.zaxxer</groupId>
+			<artifactId>HikariCP</artifactId>
+		</dependency>
 	</dependencies>
 </project>
