--- a/swak-webflux/pom.xml
+++ b/swak-webflux/pom.xml
@@ -12,5 +12,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-webflux</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.corundumstudio.socketio</groupId>
+			<artifactId>netty-socketio</artifactId>
+			<version>1.7.14</version>
+		</dependency>
 	</dependencies>
 </project>
