--- a/pom.xml
+++ b/pom.xml
@@ -634,6 +634,12 @@
 				<version>${reactor.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>io.projectreactor</groupId>
+				<artifactId>reactor-test</artifactId>
+				<version>${reactor.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
 				<groupId>io.vertx</groupId>
 				<artifactId>vertx-core</artifactId>
 				<version>${vertx.version}</version>
