添加 jmh 的基础测试来记录组件的指标

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 		<module>swak-kotlin</module>
 		<module>swak-sample</module>
 		<module>swak-actuator</module>
+		<module>swak-benchmark</module>
 	</modules>
 	<properties>
 		<spring.version>5.0.5.RELEASE</spring.version>
