--- a/swak-test/pom.xml
+++ b/swak-test/pom.xml
@@ -93,7 +93,7 @@
 			<artifactId>j2cache-core</artifactId>
 			<version>2.3.16-release</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>druid</artifactId>
@@ -120,17 +120,40 @@
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 			<version>${spring-boot.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>io.micrometer</groupId>
 			<artifactId>micrometer-core</artifactId>
+		</dependency>
+
+		<!-- 纤程 -->
+		<dependency>
+			<groupId>co.paralleluniverse</groupId>
+			<artifactId>quasar-core</artifactId>
+			<classifier>jdk8</classifier>
+		</dependency>
+
+		<dependency>
+			<groupId>co.paralleluniverse</groupId>
+			<artifactId>comsat-jdbc</artifactId>
+			<version>0.7.0</version>
+		</dependency>
+		<dependency>
+			<groupId>co.paralleluniverse</groupId>
+			<artifactId>comsat-spring-boot</artifactId>
+			<version>0.7.0</version>
+		</dependency>
+		<dependency>
+			<groupId>co.paralleluniverse</groupId>
+			<artifactId>comsat-actors-netty</artifactId>
+			<version>0.7.0</version>
 		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
 				<artifactId>maven-dependency-plugin</artifactId>
-				<version>2.5.1</version>
+				<version>3.1.0</version>
 				<executions>
 					<execution>
 						<id>getClasspathFilenames</id>
