--- a/swak-http/pom.xml
+++ b/swak-http/pom.xml
@@ -22,5 +22,10 @@
 			<artifactId>HikariCP</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.asynchttpclient</groupId>
+			<artifactId>async-http-client</artifactId>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 </project>
