--- a/swak-test/pom.xml
+++ b/swak-test/pom.xml
@@ -20,7 +20,7 @@
 			<groupId>com.swak</groupId>
 			<artifactId>swak-rpc</artifactId>
 		</dependency>
-		
+
 		<!-- rpc -->
 		<dependency>
 			<groupId>com.swak</groupId>
@@ -163,6 +163,23 @@
 			<groupId>co.paralleluniverse</groupId>
 			<artifactId>comsat-okhttp</artifactId>
 			<version>0.7.0</version>
+		</dependency>
+
+		<!-- 异步http 客户端 -->
+		<dependency>
+			<groupId>org.asynchttpclient</groupId>
+			<artifactId>async-http-client</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.asynchttpclient</groupId>
+			<artifactId>async-http-client-extras-rxjava2</artifactId>
+			<version>2.4.7</version>
+		</dependency>
+		
+		<!-- 标准的异步客户端 -->
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpasyncclient</artifactId>
 		</dependency>
 	</dependencies>
 	<build>
