数据库的性能测试

--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,11 @@
 				<artifactId>swak-actuator</artifactId>
 				<version>${project.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>com.swak</groupId>
+				<artifactId>swak-test</artifactId>
+				<version>${project.version}</version>
+			</dependency>
 
 			<!-- spring boot -->
 			<dependency>
