监控对系统来说是非常重要的

--- a/swak-common/pom.xml
+++ b/swak-common/pom.xml
@@ -8,6 +8,10 @@
 	</parent>
 	<artifactId>swak-common</artifactId>
 	<dependencies>
+	    <dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-core</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>cglib</groupId>
 			<artifactId>cglib</artifactId>
