--- a/swak-starter-web/pom.xml
+++ b/swak-starter-web/pom.xml
@@ -19,10 +19,17 @@
 		<dependency>
 			<groupId>com.swak</groupId>
 			<artifactId>swak-jdbc</artifactId>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.swak</groupId>
 			<artifactId>swak-redis</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.swak</groupId>
+			<artifactId>swak-http</artifactId>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 </project>
