--- a/swak-actuator/pom.xml
+++ b/swak-actuator/pom.xml
@@ -19,6 +19,7 @@
 		<dependency>
 			<groupId>com.zaxxer</groupId>
 			<artifactId>HikariCP</artifactId>
+			<version>${HikariCP.version}</version>
 		</dependency>
 	</dependencies>
 </project>
