--- a/swak-kotlin/pom.xml
+++ b/swak-kotlin/pom.xml
@@ -20,14 +20,17 @@
 		<dependency>
 			<groupId>org.jetbrains.kotlin</groupId>
 			<artifactId>kotlin-stdlib</artifactId>
+			<version>${kotlin.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jetbrains.kotlinx</groupId>
 			<artifactId>kotlinx-coroutines-core</artifactId>
+			<version>${kotlin.coroutines.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jetbrains.kotlinx</groupId>
 			<artifactId>kotlinx-coroutines-reactor</artifactId>
+			<version>${kotlin.coroutines.version}</version>
 		</dependency>
 	</dependencies>
 	<build>
