--- a/swak-web/pom.xml
+++ b/swak-web/pom.xml
@@ -15,6 +15,7 @@
 		<dependency>
 			<groupId>com.swak</groupId>
 			<artifactId>swak-redis</artifactId>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 </project>
