测试 不启动其他线程

--- a/swak-sample/src/main/resources/application.properties
+++ b/swak-sample/src/main/resources/application.properties
@@ -3,11 +3,12 @@ spring.application.serverSn = server-1-1
 
 # functions default enable
 #spring.application.enableRedis=true
-#spring.application.enableEventBus=true
+spring.application.enableEventBus=false
 #spring.application.enableSecurity=true
 #spring.application.enableBooter=true
 #spring.application.enableDataBase=false
 #spring.application.enableMybatis=true
+spring.application.enableWorkers=false
 
 # server
 spring.http-server.port=8080
